fix(Navbar.tsx): fix logout functionality on small screens and change(ForgotPassword.tsx): add an image

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 body{
-  background-color: rgb(40, 39, 39);
+  background-color: black
 }
